--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="demo.mark.com.xposedpluginsearch" >
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
+        <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+
+        <application
+            android:allowBackup="true"
+            android:icon="@drawable/logo"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="xposedmodule"
+                android:value="true" />
+            <meta-data
+                android:name="xposedminversion"
+                android:value="30" />
+            <meta-data
+                android:name="xposeddescription"
+                android:value="Export WeChat moments" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+            <activity android:name=".PreferenceActivity">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
 
+            <activity
+                android:name=".MainActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar" >
+            </activity>
+
+        </application>
 </manifest>
